The second init of project

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
 @import './styles/colors.scss';
 @import './styles/gutters.scss';
 @import './styles/opacity.scss';
+@import './styles/mixins.scss';
