--- a/src/styles/gutters.scss
+++ b/src/styles/gutters.scss
@@ -4,5 +4,8 @@ $gutter-6:6px;
 $gutter-8:8px;
 $gutter-10:10px;
 $gutter-12:12px;
+$gutter-20:20px;
 $gutter-24:24px;
 $gutter-48:48px;
+$gutter-100:100px;
+$gutter-200:200px;
